# iced-graph-editor

./: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  main.rs  node.rs  theme.rs  widget.rs
src/widget/: graph.rs
src/widget/graph/: editor.rs  node.rs
