[package]
name = "iced-graph-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale", features=["canvas"] }
iced_native = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale" }
iced_graphics = { git = "https://github.com/tarkah/iced.git", branch = "feat/primitive-scale" }

glam = "0.21.3"
